# 2023_do_mpc_paper

./: .conda.yml  .conda_environment.yml  .gitignore  README.md  pyproject.toml
00_Plotting/: how_to_create_beautiful_figures.ipynb  mplconfig.py
00_Plotting/results/: 03_robust_vs_nominal_exact_parameters.pgf  03_robust_vs_nominal_uncertain_parameters.pgf  05_approx_mpc_sobolov.pgf  05_approx_mpc_sobolov_table.tex  mpc_with_nn_vs_exact_model_meta.pgf
01_Example_Systems/: quadcopter.py  quadcopter_demo.ipynb
01_Example_Systems/CSTR/: cstr_controller.py  cstr_helper.py  cstr_lqr.py  cstr_lqr_demo.py  cstr_model.py  cstr_mpc.py  cstr_mpc_demo.py  cstr_simulator.py  main.py
01_Example_Systems/CSTR-Cascade/: CSTR-cascade_demo.ipynb  CSTR-cascade_demo.py  CSTRcontrol.py  CSTRmodel.py
01_Example_Systems/droneplot/: drone.py  uav.py
01_Example_Systems/quadcopter/: plot_results.py  qc_demo.py  qccontrol.py  qcmodel.py  qctrajectory.py  quadcopter_demo.ipynb  quadcopter_demo_02.ipynb
03_LQR2NMPC/: readme.txt
03_LQR2NMPC/CSTR_w_OPCUA/: cstr_ideal_closed_loop.py  cstr_offline_test_script.py  cstr_opcua_test_script.py  cstr_real_time_closed_loop.py  evaluation_real_time_vs_ideal.ipynb  evaluation_real_time_vs_ideal.py  visualize_results.py
03_LQR2NMPC/CSTR_wo_OPCUA/: cstr_comparison_robust_nominal.ipynb  cstr_comparison_robust_nominal.py
04_Data_based_NMPC/CSTR/: cstr_data_generation.py  cstr_eval_nn.py  cstr_nn_model.py  (+4 more)
99_User_stats/: 20230118_Github_Analytics_Data.xlsx
Anaconda/: conda_env.yml  readme.txt
MPL_Config/: matplotlib_config.mplstyle
(+31 files in other folders)
